Bug 318141 - double click does not work for lists in dialog "Differentiate Curves"
Summary: double click does not work for lists in dialog "Differentiate Curves"
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: ui (other bugs)
Version First Reported In: 2.0.6
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-10 15:16 UTC by Till Schäfer
Modified: 2018-11-23 13:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Till Schäfer 2013-04-10 15:16:50 UTC
When double clicking on an element in the available or selected list in the "Differentiate Curves" dialog nothing happens. It should trigger an add or remove action depending on the list in which the item resides. This is a bug because the behavior is inconsistent with other dialogs, which have the same layout (e.g. Data Wizard)

Reproducible: Always
Comment 1 Andrew Crouthamel 2018-11-10 03:22:33 UTC
Dear Bug Submitter,

This bug has been stagnant for a long time. Could you help us out and re-test if the bug is valid in the latest version? I am setting the status to NEEDSINFO pending your response, please change the Status back to REPORTED when you respond.

Thank you for helping us make KDE software even better for everyone!
Comment 2 Andrew Crouthamel 2018-11-21 04:31:47 UTC
Dear Bug Submitter,

This is a reminder that this bug has been stagnant for a long time. Could you help us out and re-test if the bug is valid in the latest version? This bug will be moved back to REPORTED Status for manual review later, which may take a while. If you are able to, please lend us a hand.

Thank you for helping us make KDE software even better for everyone!
Comment 3 Netterfield 2018-11-23 13:24:28 UTC
Git commit a987b5f9b2e0ce5c901affe0418f60356818e233 by Barth Netterfield.
Committed on 16/11/2018 at 21:56.
Pushed by netterfield into branch 'master'.

Enable double click in Differentiate Curves

M  +0    -21   devel-docs/BugsAndFeatures
M  +2    -0    src/libkstapp/differentiatecurvesdialog.cpp

https://commits.kde.org/kst-plot/a987b5f9b2e0ce5c901affe0418f60356818e233