Enable double click in Differentiate Curves

BUG: 318141